Replace with modern Java API